[gd_scene load_steps=12 format=3 uid="uid://brnwpac523qw7"]

[ext_resource type="Script" uid="uid://du7dbvmqccyja" path="res://scripts/devices/cooler.gd" id="1_or2mw"]
[ext_resource type="Script" uid="uid://dtu8fhapwdl1m" path="res://scripts/devices/draggable.gd" id="2_jplme"]
[ext_resource type="Texture2D" uid="uid://wo53ph3a8glk" path="res://assets/devices/egg_cooler.png" id="3_ooqtr"]
[ext_resource type="Texture2D" uid="uid://bkuwou1loylki" path="res://assets/devices/2d_lights_and_shadows_neutral_point_light.webp" id="4_jplme"]
[ext_resource type="AudioStream" uid="uid://b3yoipktfm3ed" path="res://assets/audio/Cooling System Loop 001.wav" id="5_y3bqr"]
[ext_resource type="AudioStream" uid="uid://buxxjdsvrwu0x" path="res://assets/audio/Appliance Switch C.wav" id="6_utsdt"]
[ext_resource type="PackedScene" uid="uid://dxlxsa4cqpp2u" path="res://scenes/devices/device_hover_panel.tscn" id="7_unlta"]
[ext_resource type="FontFile" uid="uid://cep3foox6k0yn" path="res://assets/UI_UX/fusion-pixel-12px-proportional-sc-latin-400-normal.woff2" id="8_nvg46"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ycrt"]
size = Vector2(53, 53)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_y3bqr"]
polygon = PackedVector2Array(-25, -25, -25, 25, 25, 25, 25, -25, 27, -27, 27, 27, -27, 27, -27, -27)

[sub_resource type="LabelSettings" id="LabelSettings_vektu"]
font = ExtResource("8_nvg46")
font_size = 12
font_color = Color(1, 1, 0.921569, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Cooler" type="Area2D" groups=["devices"]]
script = ExtResource("1_or2mw")
intensity = 52.0

[node name="Draggable" type="Node2D" parent="." node_paths=PackedStringArray("area_2d", "outline")]
script = ExtResource("2_jplme")
area_2d = NodePath("..")
outline = NodePath("../Outline2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0, 0.504428, 0.943027, 1)
scale = Vector2(2, 2)
texture = ExtResource("3_ooqtr")

[node name="Outline2D" type="Line2D" parent="."]
points = PackedVector2Array(-27, -27, 27, -27, 27, 27, -27, 27)
closed = true
width = 2.0
default_color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_8ycrt")

[node name="EggEffectArea2D" type="Area2D" parent="."]
z_index = -2
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="Polygon2D" type="Polygon2D" parent="EggEffectArea2D"]
color = Color(0, 0.466667, 1, 0.196078)
polygon = PackedVector2Array(-128, -128, -26, -24, 26, -24, 128, -128)
vertex_colors = PackedColorArray(0, 0.501333, 0.94, 0, 0, 0.501961, 0.941176, 1, 0, 0.501961, 0.941176, 1, 0, 0.501333, 0.94, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EggEffectArea2D"]
visible = false
polygon = PackedVector2Array(26, -24, 128, -128, -128, -128, -26, -24)

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0, 0.701961, 1, 1)
energy = 0.5
texture = ExtResource("4_jplme")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_y3bqr")

[node name="CoolerAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y3bqr")
volume_db = -12.0
max_distance = 64.0

[node name="SwitchAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_utsdt")

[node name="HoverPanelContainer" parent="." instance=ExtResource("7_unlta")]
visible = false

[node name="NameLabel" parent="HoverPanelContainer/MarginContainer/VBoxContainer" index="0"]
text = "Cooler"

[node name="DescriptionLabel" parent="HoverPanelContainer/MarginContainer/VBoxContainer" index="1"]
text = "Blows cold air in a cone to lower 
the temperature of nearby eggs"
label_settings = SubResource("LabelSettings_vektu")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="finished" from="CoolerAudioPlayer" to="." method="_on_cooler_audio_player_finished"]

[editable path="HoverPanelContainer"]
